--- a/programs/enchanted-tech-22/index.html
+++ b/programs/enchanted-tech-22/index.html
@@ -96,8 +96,8 @@ Fariborz Maseeh Hall <strong>Room 218</strong> (1 block from the max and bus mal
 
 <h3>Projects we will work on together:</h3>
 <ul>
-  <li>1 - 2  Interactive physical murals:  At Open Signal + at RAHS made by RAHS community.</li>
-<li>A series of interactive digital (rojected murals) for FMH for the show (or at RAS)</li>
+  <li>An Interactive physical mural at Open Signal</li>
+<li>A series of interactive digital (projected murals) for FMH for the show </li>
 <li>Augmented experiences - we will create templates - sound or p5 creations - create your markers and create experiences.  Theme of City as canvas</li>
 </ul>
 <hr>
