--- a/programs/enchanted-tech-22/index.html
+++ b/programs/enchanted-tech-22/index.html
@@ -36,7 +36,7 @@
         <div class="inner">
           <h2>
             Enchanted Technology Summer Festival 2022:<br />
-            <span class="orange-text">July 1 — Aug 25, 2022</span>
+            <span class="orange-text">July 1 — Aug 29, 2022</span>
           </h2>
           <h3>City as Canvas</h3>
 
@@ -49,7 +49,12 @@
           <h3>Apply to join us this summer:</h3>
           <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSfU4X3jw2rNHJJJiGF9NFlQq1MdEwkpBLFMQ6LywOORscffAg/viewform?vc=0&c=0&w=1&flr=0" target="_blank" class="button">Registration for PPS Students only</a></p>
           <a href="https://forms.gle/UYY3unVSf2Dfd46u6" target="_blank" class="button"> Registration for everyone else (General Public)</a>
-
+<br><br>
+          <h3>Drop-in Info Session</h3>
+          <p>Join us on Zoom Tue July 12th, 4:15 - 5:30pm<br>
+            Sign up on EventBrite for a zoom link.</p>
+          <p><a href="https://enchanted-tech-info.eventbrite.com" target="_blank" class="button">RSVP on EventBrite</a></p>
+          <br><br>
           <p>Learn more about our E-Textiles festival from summer 2021:</p>
           <p><a href="/programs/enchanted-tech/" class="button">E-Textiles Fest 2021</a></p>
         </div>
@@ -64,7 +69,7 @@
       </section>
       <section>
         <div class="inner">
-          <h3>Augmented Storytelling <br class="hide-desktop"><span class="orange-text">Jul 31  - Aug 8</span></h3>
+          <h3>Augmented Storytelling <br class="hide-desktop"><span class="orange-text">Aug 1 - Aug 12</span></h3>
           <p>Using/creating existing markers in the world (stickers, statues, enchanted pebbles) as breadcrumbs and tags, we will collaboratively create exciting, delightful, and subversive stories of our city and communities - real and imagined experiences that reveal new ways of seeing the world, to tell stories, to explore identities, to call for action, to subvert symbols of power, and to delight.</p>
         </div>
       </section>
@@ -74,8 +79,8 @@
           <h2>Interactive Murals</h2>
         </div>
         <div class="inner">
-          <h3>Interactive Murals (beginners)/Interactive Installations (advanced) <br class="hide-desktop"><span class="orange-text">Aug 5 - Aug 18</span></h3>
-          <p>Create hybrid physical/digital/virtual images that respond to our presence, gestures, and actions, revealing stories historical and speculative of our communities and spaces.  We'll explore different impactful ways to create interactive experiences, and (optionally) design and prototype a mural to add to a wall in the city (spaces tbd...)</p>
+          <h3>Interactive Murals (beginners)/Interactive Installations (advanced) <br class="hide-desktop"><span class="orange-text">Aug 8 - Aug 23</span></h3>
+          <p>Create hybrid physical/digital/virtual images that respond to our presence, gestures, and actions, revealing stories historical and speculative of our communities and spaces.  We'll explore different impactful ways to create interactive experiences, and (optionally) design and prototype a mural to add to a wall in the city.</p>
         </div>
       </section>
       <section>
