updated last years si

--- a/programs/enchanted-tech/index.html
+++ b/programs/enchanted-tech/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CETI | Enchanted Tech | E-Textiles Festival</title>
+    <title>CETI | Enchanted Tech 2021 | E-Textiles Festival</title>
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@400;600;700&family=Source+Sans+Pro:wght@400;700&display=swap" rel="preload" as="style" />
@@ -30,10 +30,10 @@
       <section id="intro">
         <figure><img src="/images/heros/enchantedtechbanner3.png" alt="Enchanted Tech Summer Workshop" /></figure>
         <div class="inner">
-          <h1>Enchanted Tech</h1>
+          <h1>Enchanted Tech 2021</h1>
           <h2>E-Textiles Festival</h2>
           <p>Join our Summer Festival of learning and creative experiments focused on wearables, costumes, masks, avatars and cosplay using creative technology, electronics, craft, sewing, music, and art. Our accessible, diy approach to tech is personal, and community-driven, combining the imagination, everyday materials, craft techniques, and cutting-edge technologies.</p>
-          <p><a href="https://forms.gle/rJnhvwRt5pARD4EY9" target="_blank" class="button">Sign Up Now</a> &nbsp; <a href="https://www.youtube.com/channel/UCNORXg1dJPQDrRy_slCEOMA" target="_blank" class="button">Watch on YouTube</a></p>
+          <p><a href="https://www.youtube.com/channel/UCNORXg1dJPQDrRy_slCEOMA" target="_blank" class="button">Watch on YouTube</a></p>
           <br />
         </div>
         <figure>
@@ -90,8 +90,8 @@
       function gtag() {
         dataLayer.push(arguments)
       }
-      gtag("js", new Date())
-      gtag("config", "G-CSLJ4LHBM2")
+      gtag('js', new Date())
+      gtag('config', 'G-CSLJ4LHBM2')
     </script>
   </body>
 </html>
