--- a/programs/enchanted-tech-22/index.html
+++ b/programs/enchanted-tech-22/index.html
@@ -42,34 +42,33 @@
 
           <p>The CETI Summer Institutes are 6 weeks of collaborative learning, play, and creative experiments using cutting edge technologies (xr, creative code, smart tech, interactive objects), art, and music to craft delightful and imaginative interactive objects, stories, spaces, and experiences placed around the city.</p>
 
-          <p>Join us for a summer of <strong></strong>art, technology, craft, fabrication and imagination</strong> as we infuse the cityscape with hidden messages, images, and stories. Through our <strong>workshops and institutes</strong>, learn to create objects, images, music, and experiences (physical and virtual) to reveal fantastical joyful voices, experiences, memories, and futures.</p>
+          <p>Join us for a summer of <strong>art, technology, craft, fabrication and imagination</strong> as we infuse the cityscape with hidden messages, images, and stories. Through our <strong>workshops and institutes</strong>, learn to create objects, images, music, and experiences (physical and virtual) to reveal fantastical joyful voices, experiences, memories, and futures.</p>
 
           <p><strong>Our festival</strong> this year will be made up of a series of Institutes for Youth, Educators, Community, and Professionals. <strong>Experimenting</strong> with (and learning) a variety of digital/coding platforms/tools (including p5, unity, 8th wall, ml/ai tools), with <strong>interactivity</strong> (using sensors, microcontrollers, and mobile devices), and with <strong>augmenting reality</strong>, we will introduce techniques, ideas form experts, ending in a <strong>collaborative</strong> show in <strong>September 2022</strong>.</p>
 
           <h3>Apply to join us this summer:</h3>
           <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSfU4X3jw2rNHJJJiGF9NFlQq1MdEwkpBLFMQ6LywOORscffAg/viewform?vc=0&c=0&w=1&flr=0" target="_blank" class="button">Registration for PPS Students only</a></p>
-          <a href="https://forms.gle/UYY3unVSf2Dfd46u6" target="_blank" class="button"> Registration for everyone else (General Public)</a>
-<br><br>
+          <a href="https://forms.gle/UYY3unVSf2Dfd46u6" target="_blank" class="button"> Registration for everyone else</a>
+          <br /><br />
           <h3>Drop-in Info Session</h3>
-          <p>Join us on Zoom Tue July 12th, 4:15 - 5:30pm<br>
-            Sign up on EventBrite for a zoom link.</p>
+          <p>
+            Join us on Zoom Tue July 12th, 4:15 - 5:30pm<br />
+            Sign up on EventBrite for a zoom link.
+          </p>
           <p><a href="https://enchanted-tech-info.eventbrite.com" target="_blank" class="button">RSVP on EventBrite</a></p>
-          <br><br>
-          <p>Learn more about our E-Textiles festival from summer 2021:</p>
-          <p><a href="/programs/enchanted-tech/" class="button">E-Textiles Fest 2021</a></p>
         </div>
       </section>
       <section>
-                <figure><img src="/images/heros/objects3.png" alt="Enchanted Objects" /></figure>
+        <figure><img src="/images/heros/objects3.png" alt="Enchanted Objects" /></figure>
 
         <div class="inner">
-          <h3>Enchanted Objects <br class="hide-desktop"><span class="orange-text">Jul 18 - July 25</span></h3>
-          <p>Objects that create music, that light up when they see us, and that serve as portals to wondrous experiences that reveal hidden stories about our city, that allow us to  walk in somebody else’s shoes, that imagine magical futures, that remember, and that make us visible.</p>
+          <h3>Enchanted Objects <br class="hide-desktop" /><span class="orange-text">Jul 18 - July 25</span></h3>
+          <p>Objects that create music, that light up when they see us, and that serve as portals to wondrous experiences that reveal hidden stories about our city, that allow us to walk in somebody else’s shoes, that imagine magical futures, that remember, and that make us visible.</p>
         </div>
       </section>
       <section>
         <div class="inner">
-          <h3>Augmented Storytelling <br class="hide-desktop"><span class="orange-text">Aug 1 - Aug 12</span></h3>
+          <h3>Augmented Storytelling <br class="hide-desktop" /><span class="orange-text">Aug 1 - Aug 12</span></h3>
           <p>Using/creating existing markers in the world (stickers, statues, enchanted pebbles) as breadcrumbs and tags, we will collaboratively create exciting, delightful, and subversive stories of our city and communities - real and imagined experiences that reveal new ways of seeing the world, to tell stories, to explore identities, to call for action, to subvert symbols of power, and to delight.</p>
         </div>
       </section>
@@ -79,51 +78,60 @@
           <h2>Interactive Murals</h2>
         </div>
         <div class="inner">
-          <h3>Interactive Murals (beginners)/Interactive Installations (advanced) <br class="hide-desktop"><span class="orange-text">Aug 8 - Aug 23</span></h3>
-          <p>Create hybrid physical/digital/virtual images that respond to our presence, gestures, and actions, revealing stories historical and speculative of our communities and spaces.  We'll explore different impactful ways to create interactive experiences, and (optionally) design and prototype a mural to add to a wall in the city.</p>
+          <h3>Interactive Murals (beginners)/Interactive Installations (advanced) <br class="hide-desktop" /><span class="orange-text">Aug 8 - Aug 23</span></h3>
+          <p>Create hybrid physical/digital/virtual images that respond to our presence, gestures, and actions, revealing stories historical and speculative of our communities and spaces. We'll explore different impactful ways to create interactive experiences, and (optionally) design and prototype a mural to add to a wall in the city.</p>
         </div>
       </section>
       <section>
         <div class="inner">
           <h3>What is the CETI Enchanted technology festival</h3>
-          <p>A  series of participatory formal and informal learning experiences  composed of workshops, inspiring speakers (demos/show and tell) and panels, critical dialogue, time for experimentation and prototyping, mentoring, peer learning,  collaborative idea generation, experimentation, and prototyping, family-style meals and  discussions, and research "walks". Our introductory workshops will be interspersed with advanced workshops for experts/professionals including advanced tools and techniques, as well as short intensive Institutes on Theoretical/Conceptual institutes on Impact, trends, policies, and applications.
+          <p>A series of participatory formal and informal learning experiences composed of workshops, inspiring speakers (demos/show and tell) and panels, critical dialogue, time for experimentation and prototyping, mentoring, peer learning, collaborative idea generation, experimentation, and prototyping, family-style meals and discussions, and research "walks". Our introductory workshops will be interspersed with advanced workshops for experts/professionals including advanced tools and techniques, as well as short intensive Institutes on Theoretical/Conceptual institutes on Impact, trends, policies, and applications.</p>
 
-<h3>Where:</h3>
-<p><strong>CETI Lab at PSU</strong><br>
-<strong>1855 SW Broadway</strong><br>
-Fariborz Maseeh Hall <strong>Room 218</strong> (1 block from the max and bus mall)<br>
- and adjacent classrooms, art studios, digital labs, and fabrication spaces. <br>
- Workshops and talks will be streamed on the <a href="https://www.youtube.com/channel/UCNORXg1dJPQDrRy_slCEOMA" targert="_blank">CETI YouTube site.</a></p>
-<p><a class="button" href="https://www.youtube.com/channel/UCNORXg1dJPQDrRy_slCEOMA?view_as=subscriber&sub_confirmation=1" targert="_blank">Subscribe to Our YouTube Channel</a></p>
+          <h3>Where:</h3>
+          <p>
+            <strong>CETI Lab at PSU</strong><br />
+            <strong>1855 SW Broadway</strong><br />
+            Fariborz Maseeh Hall <strong>Room 218</strong> (1 block from the max and bus mall)<br />
+            and adjacent classrooms, art studios, digital labs, and fabrication spaces. <br />
+            Workshops and talks will be streamed on the <a href="https://www.youtube.com/channel/UCNORXg1dJPQDrRy_slCEOMA" targert="_blank">CETI YouTube site.</a>
+          </p>
+          <p><a class="button" href="https://www.youtube.com/channel/UCNORXg1dJPQDrRy_slCEOMA?view_as=subscriber&sub_confirmation=1" targert="_blank">Subscribe to Our YouTube Channel</a></p>
 
-<p>Come experiment and create with an amazing talented community of artists and technologists, creating  wondrous, whimsical, mesmerizing objects, stories, and spaces.  A week or so of project creation led by experts + a  hack day to create experiences will culminateWe will also visit Open Signal and perhaps use their site for murals, PSU labs, and other interesting sites around the city based on our projects <span class="orange-text">in a September show</span>. </p>
+          <p>Come experiment and create with an amazing talented community of artists and technologists, creating wondrous, whimsical, mesmerizing objects, stories, and spaces. A week or so of project creation led by experts + a hack day to create experiences will culminateWe will also visit Open Signal and perhaps use their site for murals, PSU labs, and other interesting sites around the city based on our projects <span class="orange-text">in a September show</span>.</p>
 
-
-<h3>Projects we will work on together:</h3>
-<ul>
-  <li>An Interactive physical mural at Open Signal</li>
-<li>A series of interactive digital (projected murals) for FMH for the show </li>
-<li>Augmented experiences - we will create templates - sound or p5 creations - create your markers and create experiences.  Theme of City as canvas</li>
-</ul>
-<hr>
-</div>
-</section>
-<section class="subsection eventbrite">
-<figure><img src="/images/heros/eventbrite-hero.png" alt="Enchanted Tech Summer Workshop" /></figure>
+          <h3>Projects we will work on together:</h3>
+          <ul>
+            <li>An Interactive physical mural at Open Signal</li>
+            <li>A series of interactive digital (projected murals) for FMH for the show</li>
+            <li>Augmented experiences - we will create templates - sound or p5 creations - create your markers and create experiences. Theme of City as canvas</li>
+          </ul>
+          <hr />
+        </div>
+      </section>
+      <section class="subsection eventbrite">
+        <figure><img src="/images/heros/eventbrite-hero.png" alt="Enchanted Tech Summer Workshop" /></figure>
         <div class="header-hero-text">
           <h2>eventbrite</h2>
         </div>
-<div class="inner">
-  <p>Individual workshops will be on eventbrite</p>
-<p><a href="https://www.eventbrite.com/o/ceti-28009365641" class="button light">Follow us on eventbrite</a></p>
+        <div class="inner">
+          <p>Individual workshops will be on eventbrite</p>
+          <p><a href="https://www.eventbrite.com/o/ceti-28009365641" class="button light">Follow us on eventbrite</a></p>
+        </div>
+      </section>
+      <section class="subsection">
+        <figure><img src="/images/heros/enchantedtech-lace.png" alt="Enchanted Tech Summer Workshop" /></figure>
+        <div class="header-hero-text">
+          <h2>Past Enchanted Tech Summer Institutes</h2>
+        </div>
+        <div class="inner">
+          <p>Learn more about our E-Textiles festival from summer 2021:</p>
+          <p><a href="/programs/enchanted-tech/" class="button">E-Textiles Fest 2021</a></p>
+        </div>
+      </section>
 
-</div>
-</section>
-
-<section class="subsection">
-  <div class="inner">
-<blockquote><span class="orange-text">AR pebbles and artifacts</span> (hidden objects telling important stories when activated); AR <span class="orange-text">animated zines</span> that can dance and sing;  Tech tools for activists (augmented billboards that challenge inequity, emphasize presence); <span class="orange-text">murals</span> that speak when you make connection; digital dressup - <span class="orange-text">augmented wearables</span>; creating avatars;  Hidden stories/<span class="orange-text">puzzle hunt</span> through city choosing signs and  landmarks that have meaning to the youth; interactive installations and cityscapes;  <span class="orange-text">music-making objects</span>.   
-</blockquote>
+      <section class="subsection">
+        <div class="inner">
+          <blockquote><span class="orange-text">AR pebbles and artifacts</span> (hidden objects telling important stories when activated); AR <span class="orange-text">animated zines</span> that can dance and sing; Tech tools for activists (augmented billboards that challenge inequity, emphasize presence); <span class="orange-text">murals</span> that speak when you make connection; digital dressup - <span class="orange-text">augmented wearables</span>; creating avatars; Hidden stories/<span class="orange-text">puzzle hunt</span> through city choosing signs and landmarks that have meaning to the youth; interactive installations and cityscapes; <span class="orange-text">music-making objects</span>.</blockquote>
         </div>
       </section>
     </main>
