--- a/programs/enchanted-tech/index.html
+++ b/programs/enchanted-tech/index.html
@@ -28,7 +28,7 @@
     </header>
     <main>
       <section id="intro">
-        <figure><img src="/images/heros/enchantedtechbanner3.png" alt="Enchanted Tech Summer Workshop" /></figure>
+        <figure><img src="/images/heros/enchantedtechbanner3.png" alt="Enchanted Tech Summer Workshop 2021" /></figure>
         <div class="inner">
           <h1>Enchanted Tech 2021</h1>
           <h2>E-Textiles Festival</h2>
