--- a/programs/enchanted-tech-22/index.html
+++ b/programs/enchanted-tech-22/index.html
@@ -28,11 +28,11 @@
     </header>
     <main>
       <section id="intro">
-        <figure><img src="/images/heros/creative-drone2.png" alt="Enchanted Tech Summer Workshop" /></figure>
-        <div class="header-hero-text">
+        <figure><img src="/images/heros/enchanted22-hero-riso1.jpg" alt="Enchanted Tech Summer Workshop 2022" /></figure>
+        <!-- <div class="header-hero-text">
           <h1>Enchanted Tech 2022</h1>
           <h2>Summer Festival</h2>
-        </div>
+        </div> -->
         <div class="inner">
           <h2>
             Enchanted Technology Summer Festival 2022:<br />
