made image smaller

--- a/programs/enchanted-tech-22/index.html
+++ b/programs/enchanted-tech-22/index.html
@@ -28,7 +28,7 @@
     </header>
     <main>
       <section id="intro">
-        <figure><img src="/images/heros/enchanted22-hero-riso1.jpg" alt="Enchanted Tech Summer Workshop 2022" /></figure>
+        <figure><img src="/images/heros/enchanted22-hero-riso1.png" alt="Enchanted Tech Summer Workshop 2022" /></figure>
         <!-- <div class="header-hero-text">
           <h1>Enchanted Tech 2022</h1>
           <h2>Summer Festival</h2>
